# FNO-Trading-Model

./: .gitignore  CLAUDE.md  Interview_Master_Prep.md  Interview_Prep_Notes.md  LICENSE  Makefile  OPUS_EXECUTION_PROMPT.md  OPUS_PROMPT.md  README.md  _QUANT_SUBMISSION_PREP.md  plot_oos_results.py  plot_results.py  pyproject.toml  requirements.txt  run_backtest.py  setup.py
.github/workflows/: ci.yml
colab_training/: FNO_Training.ipynb
models/checkpoints/: fno_best.pt  fno_best_1.pt
plotting/plotting_programs/: 01_data_layer_validation.ipynb
results/backtest_reports/: 2026-07-06_oos_report.md  2026-07-07_oos_report.md
results/metrics/: 2026-07-06_oos_ablation.csv  2026-07-06_oos_cost_sensitivity.csv  2026-07-06_oos_hrp_weights.csv  2026-07-06_oos_per_instrument.csv  2026-07-06_oos_portfolio.csv  2026-07-06_oos_regime_attribution.csv  2026-07-06_validation_tuning.csv  2026-07-07_oos_ablation.csv  2026-07-07_oos_cost_sensitivity.csv  2026-07-07_oos_hrp_weights.csv  2026-07-07_oos_per_instrument.csv  2026-07-07_oos_portfolio.csv  2026-07-07_oos_regime_attribution.csv  2026-07-07_validation_tuning.csv
scripts/: plot_oos_results.py  plot_results.py  run_backtest.py  run_oos_report.py  tune_validation.py
wsq_trading/: __init__.py  backtest.py  config.py  constants.py  data.py  features.py  fno.py  hurst.py  pipeline.py  portfolio.py  reporting.py  signals.py  spde.py  utils.py
wsq_trading/tests/: __init__.py  test_backtest.py  test_data.py  test_features.py  test_fno.py  test_hurst.py  test_pipeline.py  test_pipeline_oos.py  test_portfolio.py  test_reporting.py  test_signals.py  test_spde.py
