[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# Project metadata
[project]
name = "wsq_trading"
version = "0.1.0"
description = "Rough-Heston trading model with neural operator Hurst estimation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Jai", email = "jaisagoo@outlook.com" }]

dependencies = [
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "pandas>=2.2.0",
    "statsmodels>=0.14.0",
    "torch>=2.2.0",
    "yfinance>=0.2.36",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.20.0",
    "scikit-learn>=1.4.0",
    "pyarrow>=15.0.0",
    "h5py>=3.10.0",
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
]

# Package discovery
[tool.setuptools.packages.find]
where = ["."]
include = ["wsq_trading*"]

# Black
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

# Ruff
[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

# Mypy
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

# Pytest
[tool.pytest.ini_options]
testpaths = ["wsq_trading/tests"]
addopts = "-v --tb=short"
