[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# Project metadata
[project]
name = "wsq_trading"
version = "0.1.0"
description = "Rough-Heston trading model with neural operator Hurst estimation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Jai Sagoo", email = "jaisagoo@outlook.com" }]

# Classical mode (Whittle-MLE Hurst estimation) runs on these alone.
# PyTorch is only needed for the FNO estimator -> install the [fno] extra.
dependencies = [
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "pandas>=2.2.0",
    "matplotlib>=3.8.0",
    "yfinance>=0.2.36",
    "pyarrow>=15.0.0",
]

[project.optional-dependencies]
fno = [
    "torch>=2.2.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
]

# Package discovery
[tool.setuptools.packages.find]
where = ["."]
include = ["wsq_trading*"]

# Black
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

# Ruff
[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

# Mypy
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

# Pytest
[tool.pytest.ini_options]
testpaths = ["wsq_trading/tests"]
addopts = "-v --tb=short"
